Homework Retake 1 (fixed formula)

--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="page-top">
         <h1>Homework 1</h1>
-        <p>Introduciton, data types, console.log()</p>
+        <p>Introduction, data types, console.log()</p>
     </header>
     <script src="js/script.js"></script>
 </body>
